Prepare for API updates
